# BTC-Wallet-CK

./: .gitignore  ARCHITECTURE.md  BUILD_NOTES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_V0_27.md  MIGRATION_V0_28.md  PROJECT_PLAN.md  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json
archive/legacy-v0.26-modules/src-tauri-src/: acceptance.rs  build_doctor.rs  e2e_harness.rs  external_release.rs  first_run.rs  ldk_address.rs  ldk_real_signet.rs  ldk_runtime.rs  ldk_signet_branch.rs  lightning.rs  lightning_experimental.rs  lightning_node.rs  lightning_signet.rs  main.rs.bak  miner_profiles.rs  miner_runbook.rs  mvp_flow.rs  ocean.rs  ocean_dashboard.rs  opensource.rs  payout.rs  product_mvp.rs  release_gate.rs  setup_bundle.rs  signet_fixture.rs
scripts/: collect-rust-diagnostics.ps1  collect-rust-diagnostics.sh  local-validate.ps1  local-validate.sh
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: address_book.rs  core_lightning.rs  lib.rs  main.rs  storage.rs  wallet.rs
