[package]
name = "carlosk-wallet"
version = "0.99.6"
description = "BTC Wallet CK: simple self-custody Bitcoin + BOLT12 desktop wallet"
authors = ["Carlos Knight"]
edition = "2021"

[lib]
name = "carlosk_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
anyhow = "1"
bip39 = { version = "2", features = ["rand"] }
bitcoin = "0.32.6"
bdk_wallet = { version = "2.2.0", features = ["rusqlite"] }
bdk_bip322 = "0.1.0"
bdk_esplora = { version = "0.22.1", features = ["blocking"] }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
ldk-node = { version = "0.7.0", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
ldk-node-experimental = []
ldk-node-signet = []
ldk-node-signet-runtime = ["dep:ldk-node"]
# v0.99.6 wallet MVP: LDK remains optional and mainnet Lightning is still locked until signet/testnet recovery is proven.
